<resources>
    <string name="app_name">IWasHere</string>
    <string name="app_logo_text">Logo of application</string>

    <!-- strings for toolbar -->
    <string name="map_string">Map</string>
    <string name="regions_string">Regions</string>
    <string name="settings_string">Settings</string>
    <string name="help_string">Help</string>

    <string name="kurgan">Курганская область</string>
    <string name="novgorod">Новгородская область</string>
    <string name="ulyanovsk">Ульяновская область</string>
    <string name="tula">Тульская область</string>
    <string name="saratov">Саратовская область</string>
    <string name="kursk">Курская область</string>
    <string name="krasnoyarsk">Красноярский край</string>
    <string name="arhangel">Архангельская область</string>
    <string name="karachaevo_cherkessia">Карачаево-Черкесская Республика</string>
    <string name="dagestan">Республика Дагестан</string>
    <string name="stavropol">Ставропольский край</string>
    <string name="tver">Тверская область</string>
    <string name="ivanovo">Ивановская область</string>
    <string name="udmurtia">Удмуртская Республика</string>
    <string name="mariy_el">Республика Марий Эл</string>
    <string name="omsk">Омская область</string>
    <string name="tumen">Тюменская область</string>
    <string name="altai_krai">Алтайский край</string>
    <string name="tomsk">Томская область</string>
    <string name="novosibirsk">Новосибирская область</string>
    <string name="perm">Пермский край</string>
    <string name="bashkortostan">Республика Башкортостан</string>
    <string name="sverdlovsk">Свердловская область</string>
    <string name="chelyabinsk">Челябинская область</string>
    <string name="murmansk">Мурманская область</string>
    <string name="saha">Республика Саха (Якутия)</string>
    <string name="chukotka">Чукотский автономный округ</string>
    <string name="magadan">Магаданская область</string>
    <string name="yamalo_nenets">Ямало-Ненецкий автономный округ</string>
    <string name="yugra">Ханты-Мансийский автономный округ - Югра</string>
    <string name="karelia">Республика Карелия</string>
    <string name="piter">Санкт-Петербург</string>
    <string name="nenec">Ненецкий автономный округ</string>
    <string name="leningrad">Ленинградская область</string>
    <string name="komi">Республика Коми</string>
    <string name="vologda">Вологодская область</string>
    <string name="orel">Орловская область</string>
    <string name="smolensk">Смоленская область</string>
    <string name="voronezh">Воронежская область</string>
    <string name="habarovsk">Хабаровский край</string>
    <string name="adygea">Республика Адыгея</string>
    <string name="moscow_city">Москва</string>
    <string name="kostroma">Костромская область</string>
    <string name="belgorod">Белгородская область</string>
    <string name="kaluga">Калужская область</string>
    <string name="vladimir">Владимирская область</string>
    <string name="tambov">Тамбовская область</string>
    <string name="lipetsk">Липецкая область</string>
    <string name="ryazan">Рязанская область</string>
    <string name="moscow_obl">Московская область</string>
    <string name="kamchatka">Камчатский край</string>
    <string name="primorsky">Приморский край</string>
    <string name="yevrey">Еврейская автономная область</string>
    <string name="amur">Амурская область</string>
    <string name="mordovia">Республика Мордовия</string>
    <string name="bryansk">Брянская область</string>
    <string name="pskov">Псковская область</string>
    <string name="astrahan">Астраханская область</string>
    <string name="sahalin">Сахалинская область</string>
    <string name="ingushetia">Республика Ингушетия</string>
    <string name="sev_osetia">Республика Северная Осетия-Алания</string>
    <string name="kabardino_balkaria">Кабардино-Балкарская Республика</string>
    <string name="chechnya">Чеченская Республика</string>
    <string name="kaliningrad">Калининградская область</string>
    <string name="kalmykia">Республика Калмыкия</string>
    <string name="krasnodar">Краснодарский край</string>
    <string name="rostov">Ростовская область</string>
    <string name="volgograd">Волгоградская область</string>
    <string name="kirov">Кировская область</string>
    <string name="chuvashia">Чувашская Республика - Чувашия</string>
    <string name="tatarstan">Республика Татарстан</string>
    <string name="yaroslavl">Ярославская область</string>
    <string name="orenburg">Оренбургская область</string>
    <string name="samara">Самарская область</string>
    <string name="penza">Пензенская область</string>
    <string name="nizhny">Нижегородская область</string>
    <string name="kemerovo">Кемеровская область</string>
    <string name="buryatiya">Республика Бурятия</string>
    <string name="zabaikal">Забайкальский край</string>
    <string name="irkutsk">Иркутская область</string>
    <string name="altai_rep">Республика Алтай</string>
    <string name="hakasia">Республика Хакасия</string>
    <string name="tyva">Республика Тыва</string>

    <string name="login_string">Login</string>
    <string name="register_string">Create account</string>


    <!-- string for auth, register and account layouts -->
    <string name="email_text">E-mail</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="turn_on_register_mode">No account yet? Create one</string>
    <string name="name_text">Username</string>
    <string name="create_account_text">Sign up</string>
    <string name="turn_on_login_mode">Already a member? Login</string>
    <string name="sign_up_text">Signing up</string>
    <string name="sign_out_text">Sign out</string>
    <string name="account_text">Account</string>
    <string name="restore_text">Restore</string>
    <string name="backup_text">Backup</string>

    <!-- strings for program messages to user -->
    <string name="auth_text">Authenticating…</string>
    <string name="getting_data_from_server_text">Loading data from server…</string>
    <string name="invalid_email_error_message">Invalid email</string>
    <string name="short_password_error_message">Short password. It must has 6 characters at least!</string>
    <string name="short_password_invalid_email">Invalid email and short password. A password must has 6 characters at least!</string>
    <string name="auth_failed_message">Unfortunately, it\'s impossible to authorize</string>
    <string name="invalid_username_email_short_password">Invalid email, too short username (it must has 2 characters at least) and too short password(min length is 6 characters)</string>
    <string name="invalid_email_invalid_username">Invalid email and too short username (min length is 2 characters</string>
    <string name="short_username_error_message">Invalid username. Min length is 2 characters</string>
    <string name="short_password_invalid_username">Too short password (min length is 6 characters) and too short username(min length is 2 characters)</string>
    <string name="registration_failed_message">The account hasn\'t been created!</string>
    <string name="ok_message">OK</string>

    <string name="invalid_data">Invalid data</string>
    <string name="auth_troubles_title">Authorization problems</string>
    <string name="registration_problems_title">Registration problems</string>

    <string name="default_email">No e-mail address</string>
    <string name="default_username">Anonymous</string>
    <string name="backup_successful">Successful backup</string>
    <string name="restore_successful">Restored data successfully</string>

    <string name="backup_troubles_title">Unable to backup</string>
    <string name="backup_troubles_text">Please, check your internet connection</string>

    <string name="restore_troubles_title">Unable to restore</string>
    <string name="restore_troubles_text">Please, check your internet connection</string>

    <string name="no_internet_message">No internet connection. Please, try later</string>
    <string name="backup_in_progress_message">Backing up the map</string>
    <string name="backup_successfully">The map was successfully backed up</string>

    <string name="restore_in_progress_message">Restoring the map</string>
    <string name="successfully_restored">The map was successfully restored</string>

    <string name="connect_with_server">Connecting with server</string>
    <string name="google_connection_failed">Cannot connect to Google Services</string>
    <string name="menu_submit_current_region">Submit current region</string>
    <string name="missing_permission">You\'re missing some permissions. Configure them in
        Settings.
    </string>

    <string name="default_license_title">License</string>
    <string name="default_license_text">All rights reserved</string>
    <string name="region_image_description">Region image</string>

    <string name="unexpected_error_message">Unexpected error</string>
    <string name="long_username_error_message">Too long username. Max length is 16 characters</string>
    <string name="long_password_error_message">Too long password. Max length is 16 characters</string>
    <string name="geocode_error">Failed to get current region</string>
    <string name="location_error">Could not get current location. Check your settings</string>
    <string name="location_success">Successful update</string>
</resources>
